--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ function myFunction() {
 
 
 <h2>Free MEMES!!!</h2>
+<h2>Free MEMES!!!</h2>
 <p>MEMES!!!</p>
 
 <button onclick="myFunction()">Memes Button</button>
@@ -74,6 +75,7 @@ function myFunction() {
     location.replace("https://www.google.com/search?q=memes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjU___278rdAhUDHTQIHWkFAOUQ_AUIDigB&biw=1200&bih=723#imgrc=og2cGDJc14zaxM:")
 }
 </script>
+
 
 
 </body>
